Issue #17168: cleanup Run-Inspection issues ahead of JDK 17 migration